# Game-cpp

./: AllcoateObjects.cpp  AllcoateSoldiers.h  BodyArmor.cpp  BodyArmor.h  Defence.h  M16.cpp  M16.h  MainLogic.cpp  Missle.cpp  Missle.h  Paramedic.cpp  Paramedic.h  Player.cpp  Point2D.cpp  Point2D.h  RegularSoldier.cpp  RegularSoldier.h  ShieldArmor.cpp  ShieldArmor.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  Solid.cpp  Source.cpp  Uzi.cpp  Uzi.h  Weapon.cpp  Weapon.h  builder.h  builderExample.cpp  csv2player.cpp  csv2vector.cpp  csv2vectors.cpp  csv2vectors.h  initItemPoint.cpp  initItemPoint.h  player1_file_example.csv
Project9/: Project9.sln
Project9/Debug/: Project9.ilk
Project9/Project9/: AllcoateObjects.cpp  AllcoateObjects.h  AllcoateSoldiers.cpp  BodyArmor.h  CMakeLists.txt  Defence.cpp  Element.h  FileControl.h  M16.h  MainLogic.cpp  Map.cpp  Map.h  Missle.cpp  Missle.h  Paramedic.cpp  Paramedic.h  Player.h  Point2D.cpp  Point2D.h  Project9.vcxproj  Project9.vcxproj.filters  README.md  RegularSoldier.cpp  RegularSoldier.h  ShieldArmor.cpp  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  Solid.h  TaxVisitor.cpp  TaxVisitor.h  Uzi.cpp  Visitor.h  builder.h  builderExample.cpp  csv2player.cpp  csv2player.h  csv2vector.cpp  csv2vector.h  (+11 more)
Project9/Project9/Debug/: allcoatesoldiers.obj.enc  stepsoldier.obj.enc  vc141.idb
Project9/Project9/Debug/Project9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project9.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
